[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "level13"
version = "0.1.0"
description = "Personal Spotify Wrapped — always-available listening analytics"
requires-python = ">=3.11"
dependencies = [
    "spotipy>=2.24",
    "click>=8.1",
    "textual>=0.70",
    "rich>=13.0",
]

[project.scripts]
level13 = "level13.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
